--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -1,112 +1,117 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Intranet Codemaze</title>
+    <title>Página com Barra Superior</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
+        /* Estilo geral da página */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
         }
 
-        /* Barra superior */
-        .top-bar {
+        /* Estilo da barra superior */
+        .navbar {
             background-color: #333;
-            color: white;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
-            padding: 10px 20px;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            left: 0;
-            z-index: 1000;
+            padding: 10px 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        /* Título à esquerda */
-        .top-bar .title {
-            font-size: 18px;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        /* Links na barra superior */
-        .top-bar .menu {
-            display: flex;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        .top-bar .menu li {
-            margin: 0 10px;
-        }
-
-        .top-bar .menu a {
+        /* Estilo dos itens da barra (ícones e textos) */
+        .navbar a {
             color: white;
             text-decoration: none;
-            font-size: 14px;
             display: flex;
             align-items: center;
-            transition: color 0.3s;
+            font-size: 13px; /* Texto ainda mais suave */
+            margin: 0 15px; /* Espaçamento mais suave */
+            transition: all 0.3s ease-in-out; /* Transição suave */
         }
 
-        .top-bar .menu a:hover {
-            color: #e60000; /* Vermelho ao passar o mouse */
+        /* Cor dos ícones */
+        .navbar a i {
+            color: #e74c3c; /* Vermelho suave */
+            font-size: 18px; /* Ícones suaves */
+            margin-right: 6px; /* Menos espaço entre ícone e texto */
+            transition: all 0.3s ease-in-out; /* Transição suave para hover */
         }
 
-        /* Ícones */
-        .top-bar .menu i {
-            margin-right: 5px;
-            font-size: 18px; /* Ícones menores */
+        /* Efeito hover nos links */
+        .navbar a:hover {
+            opacity: 0.8;
+            transform: scale(1.1); /* Leve aumento de tamanho */
         }
 
-        /* Corpo da página para não sobrepor com a barra fixa */
-        .content {
-            margin-top: 60px; /* Dá espaço para a barra fixa */
-            padding: 20px;
+        .navbar a:hover i {
+            color: #c0392b; /* Vermelho mais intenso no hover */
         }
 
+        /* Estilo dos iframes */
         iframe {
             width: 100%;
             height: 500px;
             border: none;
+            margin-top: 20px;
+            border-radius: 8px; /* Bordas arredondadas */
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
-
     </style>
 </head>
 <body>
 
-    <!-- Barra superior -->
-    <div class="top-bar">
-        <!-- Título da barra -->
-        <div class="title">Intranet Codemaze</div>
-
-        <!-- Menu de ícones e links -->
-        <ul class="menu">
-            <li><a href="#" onclick="loadIframe('home.html')"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="#" onclick="loadIframe('about.html')"><i class="fas fa-info-circle"></i> About</a></li>
-            <li><a href="#" onclick="loadIframe('services.html')"><i class="fas fa-cogs"></i> Services</a></li>
-            <li><a href="#" onclick="loadIframe('contact.html')"><i class="fas fa-phone-alt"></i> Contact</a></li>
-        </ul>
+    <!-- Barra superior com 8 ícones e textos -->
+    <div class="navbar">
+        <a href="#" onclick="loadIframe('https://www.example.com');">
+            <i class="fas fa-home"></i>
+            Home
+        </a>
+        <a href="#" onclick="loadIframe('https://www.example.com/about');">
+            <i class="fas fa-info-circle"></i>
+            About
+        </a>
+        <a href="#" onclick="loadIframe('https://www.example.com/services');">
+            <i class="fas fa-cogs"></i>
+            Services
+        </a>
+        <a href="#" onclick="loadIframe('https://www.example.com/contact');">
+            <i class="fas fa-phone-alt"></i>
+            Contact
+        </a>
+        <a href="#" onclick="loadIframe('https://www.example.com/blog');">
+            <i class="fas fa-blog"></i>
+            Blog
+        </a>
+        <a href="#" onclick="loadIframe('https://www.example.com/portfolio');">
+            <i class="fas fa-briefcase"></i>
+            Portfolio
+        </a>
+        <a href="#" onclick="loadIframe('https://www.example.com/testimonials');">
+            <i class="fas fa-comments"></i>
+            Testimonials
+        </a>
+        <a href="#" onclick="loadIframe('https://www.example.com/faqs');">
+            <i class="fas fa-question-circle"></i>
+            FAQs
+        </a>
     </div>
 
-    <!-- Conteúdo da página -->
-    <div class="content">
-        <iframe id="iframe" src=""></iframe>
+    <!-- Área do iframe onde o conteúdo será carregado -->
+    <div id="iframe-container">
+        <iframe id="iframe" src="https://www.example.com"></iframe>
     </div>
 
-    <!-- Script para carregar os iframes -->
     <script>
-        function loadIframe(page) {
-            document.getElementById('iframe').src = page;
+        function loadIframe(url) {
+            document.getElementById('iframe').src = url;
         }
     </script>
-    
 </body>
 </html>
