--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -69,9 +69,9 @@
 
     <!-- Barra superior com 8 ícones e textos -->
     <div class="navbar">
-        <a href="#" onclick="loadIframe('https://www.example.com');">
+        <a href="#" onclick="loadIframe('index.php');">
             <i class="fas fa-home"></i>
-            Home
+            SGCS
         </a>
         <a href="#" onclick="loadIframe('https://www.example.com/about');">
             <i class="fas fa-info-circle"></i>
