--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -57,9 +57,9 @@
         /* Estilo dos iframes */
         iframe {
             width: 100%;
-            height: 500px;
+            height: 100%;
             border: none;
-            margin-top: 20px;
+            margin-top: 0px;
             border-radius: 8px; /* Bordas arredondadas */
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
