--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -57,10 +57,10 @@
         /* Estilo dos iframes */
         iframe {
             width: 100%;
-            height: 100%;
+            height: 1000px;
             border: none;
             margin-top: 0px;
-            border-radius: 8px; /* Bordas arredondadas */
+            border-radius: 0px; /* Bordas arredondadas */
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
     </style>
