--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -17,7 +17,7 @@
 
         /* Estilo da barra superior */
         .navbar {
-            background-color: #333;
+            background-color: #222; /* Preto mais intenso */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -38,8 +38,8 @@
 
         /* Cor dos ícones */
         .navbar a i {
-            color: #e74c3c; /* Vermelho suave */
-            font-size: 18px; /* Ícones suaves */
+            color: #f39c12; /* Laranja */
+            font-size: 20px; /* Ícones com tamanho adequado */
             margin-right: 6px; /* Menos espaço entre ícone e texto */
             transition: all 0.3s ease-in-out; /* Transição suave para hover */
         }
@@ -51,13 +51,13 @@
         }
 
         .navbar a:hover i {
-            color: #c0392b; /* Vermelho mais intenso no hover */
+            color: #e67e22; /* Laranja mais intenso no hover */
         }
 
         /* Estilo dos iframes */
         iframe {
             width: 100%;
-            height: 1000px;
+            height: 100vh; /* 100% de altura da tela */
             border: none;
             margin-top: 0px;
             border-radius: 0px; /* Bordas arredondadas */
