--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -22,6 +22,11 @@
             justify-content: center;
             align-items: center;
             padding: 10px 0;
+            position: fixed; /* Fixa a barra no topo */
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000; /* Garante que a barra fique acima de outros elementos */
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
@@ -38,7 +43,7 @@
 
         /* Cor dos ícones */
         .navbar a i {
-            color: #f39c12; /* Laranja */
+            color: #d35400; /* Laranja mais escuro */
             font-size: 20px; /* Ícones com tamanho adequado */
             margin-right: 6px; /* Menos espaço entre ícone e texto */
             transition: all 0.3s ease-in-out; /* Transição suave para hover */
@@ -59,7 +64,7 @@
             width: 100%;
             height: 100vh; /* 100% de altura da tela */
             border: none;
-            margin-top: 0px;
+            margin-top: 60px; /* Ajusta o espaço para não cobrir a barra fixa */
             border-radius: 0px; /* Bordas arredondadas */
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
