--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -64,7 +64,7 @@
             width: 100%;
             height: 100vh; /* 100% de altura da tela */
             border: none;
-            margin-top: 60px; /* Ajusta o espaço para não cobrir a barra fixa */
+            margin-top: 0px; /* Remove o espaço entre a barra e o iframe */
             border-radius: 0px; /* Bordas arredondadas */
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
