--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -62,11 +62,16 @@
         /* Estilo dos iframes */
         iframe {
             width: 100%;
-            height: 100vh; /* 100% de altura da tela */
+            height: calc(100vh - 50px); /* Altura da tela menos a altura da barra */
             border: none;
             margin-top: 0px; /* Remove o espaço entre a barra e o iframe */
             border-radius: 0px; /* Bordas arredondadas */
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Ajuste para o conteúdo não ficar por trás da barra fixa */
+        body {
+            padding-top: 50px; /* Espaço para a barra não cobrir conteúdo */
         }
     </style>
 </head>
