--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -70,7 +70,7 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
-        /* Estilo da barra de navegação vertical */
+        /* CSS para ocultar a barra lateral */
         .vertical-nav {
             width: 200px; /* Largura da barra lateral */
             position: fixed;
@@ -100,7 +100,6 @@
         .hide-vertical-nav {
             display: none;
         }
-
     </style>
 </head>
 <body>
