--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -7,13 +7,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
         /* Estilo geral da página */
-        html, body {
-            height: 100%; /* Garante que a altura ocupe toda a tela */
+        body {
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
-            overflow: hidden; /* Remove a barra de rolagem */
         }
 
         /* Estilo da barra superior */
@@ -37,40 +36,45 @@
             text-decoration: none;
             display: flex;
             align-items: center;
-            font-size: 13px;
-            margin: 0 15px;
-            transition: all 0.3s ease-in-out;
+            font-size: 13px; /* Texto ainda mais suave */
+            margin: 0 15px; /* Espaçamento mais suave */
+            transition: all 0.3s ease-in-out; /* Transição suave */
         }
 
         /* Cor dos ícones */
         .navbar a i {
             color: #d35400; /* Laranja mais escuro */
-            font-size: 20px;
-            margin-right: 6px;
-            transition: all 0.3s ease-in-out;
+            font-size: 20px; /* Ícones com tamanho adequado */
+            margin-right: 6px; /* Menos espaço entre ícone e texto */
+            transition: all 0.3s ease-in-out; /* Transição suave para hover */
         }
 
         /* Efeito hover nos links */
         .navbar a:hover {
             opacity: 0.8;
-            transform: scale(1.1);
+            transform: scale(1.1); /* Leve aumento de tamanho */
         }
 
         .navbar a:hover i {
-            color: #e67e22;
+            color: #e67e22; /* Laranja mais intenso no hover */
         }
 
         /* Estilo dos iframes */
         iframe {
             width: 100%;
-            height: calc(100vh - 50px); /* Ocupa toda a altura disponível menos a altura da barra superior */
+            height: calc(100vh - 50px); /* Altura da tela menos a altura da barra */
             border: none;
-            margin-top: 0px;
-            border-radius: 0px;
+            margin-top: 0px; /* Remove o espaço entre a barra e o iframe */
+            border-radius: 0px; /* Bordas arredondadas */
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
-        /* CSS para ocultar a barra lateral */
+        /* Ajuste para o conteúdo não ficar por trás da barra fixa */
+        body {
+            padding-top: 50px; /* Espaço para a barra não cobrir conteúdo */
+        }
+
+        /* Estilo da barra de navegação vertical */
         .vertical-nav {
             width: 200px; /* Largura da barra lateral */
             position: fixed;
@@ -93,12 +97,12 @@
         }
 
         .vertical-nav a:hover {
-            color: #e67e22;
+            color: #e67e22; /* Laranja quando o mouse passa sobre */
         }
 
         /* CSS para ocultar a barra lateral */
         .hide-vertical-nav {
-            display: none;
+            display: none; /* Isso oculta a barra lateral */
         }
     </style>
 </head>
