--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página com Barra Superior</title>
+    <title>Codemaze - Intranet</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
         /* Estilo geral da página */
@@ -153,7 +153,7 @@
 
     <!-- Área do iframe onde o conteúdo será carregado -->
     <div id="iframe-container">
-        <iframe id="iframe" src="https://www.example.com"></iframe>
+        <iframe id="iframe" src="https://www.codemaze.com.br"></iframe>
     </div>
 
     <script>
