--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -110,7 +110,7 @@
 
     <!-- Barra superior com 8 ícones e textos -->
     <div class="navbar">
-        <a href="#" onclick="loadIframe('index.php');">
+        <a href="#" onclick="loadIframe('dashboard.php');">
             <i class="fas fa-home"></i>
             SGCS
         </a>
@@ -153,7 +153,7 @@
 
     <!-- Área do iframe onde o conteúdo será carregado -->
     <div id="iframe-container">
-        <iframe id="iframe" src="https://www.codemaze.com.br"></iframe>
+        <iframe id="iframe" src="index.php"></iframe>
     </div>
 
     <script>
