--- a/admin/intranet.html
+++ b/admin/intranet.html
@@ -153,7 +153,7 @@
 
     <!-- Área do iframe onde o conteúdo será carregado -->
     <div id="iframe-container">
-        <iframe id="iframe" src="index.php"></iframe>
+        <iframe id="iframe" src="https://www.example.com"></iframe>
     </div>
 
     <script>
