--- a/admin/intro.html
+++ b/admin/intro.html
@@ -31,7 +31,7 @@
 
     <!-- Contêiner do logo -->
     <div class="logo-container">
-        <img src="https://via.placeholder.com/150" alt="Logo"> <!-- Substitua o link da imagem pelo seu logo -->
+        <img src="https://www.codemaze.com.br/site/images/logos/intranet_intro.png" alt="Logo"> <!-- Substitua o link da imagem pelo seu logo -->
     </div>
 
 </body>
